@@ -1,0 +1,6 @@
+#Simple empty script that can be used to disable some actions of items when python is available
+
+import Crossfire
+
+print "Nothing script"
+Crossfire.SetReturnValue(1)
