@@ -6,6 +6,7 @@ width 15
 height 15
 msg
 Created:  1993-10-15
+Modified: 2007-12-22 tchize
 endmsg
 end
 arch dirtfloor
@@ -540,6 +541,10 @@ endmsg
 x 5
 y 9
 connected 9
+arch event_say
+title Python
+slaying /python/misc/doNothing.py
+end
 end
 arch dirtfloor
 x 5
@@ -576,6 +581,11 @@ y 9
 speed 1.0
 friendly 1
 stand_still 1
+arch event_say
+name scorn/kar/mork.msg
+title Python
+slaying /python/misc/npc_dialog.py
+end
 end
 arch dirtfloor
 x 5
